fixed alignment

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -279,7 +279,7 @@ li:first-child a {
 }
 
 .forth-container-article {
-    padding-bottom: 1em;
+    padding-top: 16px;
 }
 
 .box-element {
